--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <img src="images/bg3.JPG">  
+    <img src="images/bg3.jpg">  
     <h1>WASEGUARD</h1>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
