--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-      <p>Waseda Direct is where you can find all the academic information necessary to live<br>your university life. 
-        We’ll be introducing the writing center, university e-resources,<br>and softwares provided by Waseda. 
-        Dig into our pages and find out what gives you a competitive advantage.</p>              
+      <p>Waseda Direct is where you can find all the academic information necessary to<br>live your university life. 
+        We’ll be introducing the writing center, university<br>e-resources,and softwares provided by Waseda. 
+        Dig into our pages and find out<br>what gives you a competitive advantage.</p>              
     </div>  
   </section>
 <!--   Fifth block End   -->
