--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-    <p>SILS×SILS offers SILS students a platform to socialize with other SILS students.<br> 
-      Students can use Facebook private page and LINE to chat with other students.<br> Also, we will upload useful information
-      in each media (LINE, Instagram, Facebook).</p>    
+    <p>SILS×SILS offers SILS students a platform to socialize with other SILS<br>students. 
+      Students can use Facebook private page and LINE to chat with<br>other students. Also, we will upload useful information
+      in each media (LINE,<br>Instagram, Facebook).</p>    
   </div>
 </section>
 <!--   Fourth block End   -->
@@ -93,9 +93,9 @@
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-      <p>Waseda Direct is where you can find all the academic information necessary to<br>live your university life. 
+      <p>Waseda Direct is where you can find all the academic information necessary<br>to live your university life. 
         We’ll be introducing the writing center, university<br>e-resources,and softwares provided by Waseda. 
-        Dig into our pages and find out<br>what gives you a competitive advantage.</p>              
+        Dig into our pages and find<br>out what gives you a competitive advantage.</p>              
     </div>  
   </section>
 <!--   Fifth block End   -->
@@ -118,7 +118,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <p>WASEGUARD aims to support SILS students obtain all the safety-related<br>information necessary under COVID-19 in a timely and accurate manner.
-    <br>Our website will be divided into 4 sections:<br>(1)Immigration news (2)Waseda's safety guidelines (3)Club information (4)FAQ.</p>      
+    <br>Our website will be divided into 4 sections: (1)Immigration news<br>(2)Waseda's safety guidelines (3)Club information (4)FAQ.</p>      
   </div>
 </section>
 <!--   Sixth block End   -->
