--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-    <p>SILS×SILS offers SILS students a platform to socialize with other SILS<br>students. 
-      Students can use Facebook private page and LINE to chat with<br>other students. Also, we will upload useful information
-      in each media<br>(LINE, Instagram, Facebook).</p>    
+    <p>SILS×SILS offers SILS students a platform to socialize with<br>other SILS students. Students can use Facebook private page<br>and LINE to chat with other students. Also, we will upload useful<br>information in each media (LINE, Instagram, Facebook).</p>    
   </div>
 </section>
 <!--   Fourth block End   -->
@@ -93,9 +91,7 @@
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-      <p>Waseda Direct is where you can find all the academic information<br>necessary to live your university life. 
-        We’ll be introducing the writing<br>center, university e-resources,and softwares provided by Waseda. 
-        Dig<br>into our pages and find out what gives you a competitive advantage.</p>              
+      <p>Waseda Direct is where you can find all the academic<br>information necessary to live your university life. We’ll be<br>introducing the writing center, university e-resources,and<br>softwares provided by Waseda. Dig into our pages and find out<br>what gives you a competitive advantage.</p>              
     </div>  
   </section>
 <!--   Fifth block End   -->
@@ -117,8 +113,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-    <p>WASEGUARD aims to support SILS students obtain all the safety-<br>related information necessary under COVID-19 in a timely and<br>accurate manner.
-    Our website will be divided into 4 sections:<br>(1)Immigration news (2)Waseda's safety guidelines (3)Club information (4)FAQ.</p>      
+    <p>WASEGUARD aims to support SILS students obtain all the safety-<br>related information necessary under COVID-19 in a timely and<br>accurate manner. Our website will be divided into 4 sections: (1)Immigration news (2)Waseda's safety guidelines<br>(3)Club information (4)FAQ.</p>      
   </div>
 </section>
 <!--   Sixth block End   -->
