--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-    <p>WASEGUARD aims to support SILS students obtain all the safety-related information necessary under COVID-19<br>in a timely and accurate manner. Our website will be divided into 4 sections: (1)Immigration news (2)Waseda's safety guidelines<br>(3)Club information (4)FAQ.</p>      
+    <p>WASEGUARD aims to support SILS students obtain all the safety-related information necessary under COVID-19<br>in a timely and accurate manner. Our website will be divided into 4 sections: (1)Immigration news (2)Waseda's safety guidelines (3)Club information (4)FAQ.</p>      
   </div>
 </section>
 <!--   Sixth block End   -->
