--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
   <p class="info-text">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
-        Hello! We are SILS senior students in Dr. Morimoto's<br>Economy and Business Seminar. <br>We are happy to greet you to the upcoming college life.<br>
-        In our Seminar, due to the COVID-19 pandemic, we have been working on the campaign project<br>to help the freshmen to enjoy school life in this new normal era. 
-        <br>To make your college life more intriguing, we would like to offer you 3 online services:<br> (1) SILSxSILS (2)Waseda Direct (3)WASEGUARD
+    Hello! We are SILS senior students in Dr. Morimoto's Economy and Business Seminar. We are happy to greet you to the upcoming college life. In our Seminar, due to the COVID-19 pandemic, we have been working on the campaign project to help the freshmen to enjoy school life in this new normal era. To make your college life more intriguing, we would like to offer you 3 online services: (1) SILSxSILS (2)Waseda Direct (3)WASEGUARD
   </p>
 </section>
 <!--   Second block End   -->
