--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <div class="wasedadirect">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
-      <a href="https://wasedadirect.wordpress.com/" class="web"><i class="fas fa-laptop faa-bounce animated"></i>Website</a>
+      <a href="http://wasedadirect.com/" class="web"><i class="fas fa-laptop faa-bounce animated"></i>Website</a>
       <a href="https://www.instagram.com/waseda_direct/" class="insta"><i class="fab fa-instagram faa-tada animated-hover"></i>Instagram</a>
-      <a href="https://youtu.be/JDnQgOcIZlY " class="youtube"><i class="fab fa-youtube faa-vertical animated-hover"></i>Video</a>
+      <a href="https://youtu.be/zJqhYTpGh1A" class="youtube"><i class="fab fa-youtube faa-vertical animated-hover"></i>Video</a>
 
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
