--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="waseguard">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
-  <a href="https://covidinfozemi.wixsite.com/mysite" class="web"><i class="fas fa-laptop faa-bounce animated"></i>Website</a>
+  <a href="https://waseguard.wixsite.com/mysite" class="web"><i class="fas fa-laptop faa-bounce animated"></i>Website</a>
   <a href="https://www.instagram.com/waseguard/" class="insta"><i class="fab fa-instagram faa-tada animated-hover"></i>Instagram</a>
 
   <a href="https://twitter.com/waseguard" class="tw"><i class="fab fa-twitter faa-wrench animated-hover"></i>Twitter</a>
