--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
   </p>
   
   <p class="info-text">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     Hello! We are SILS senior students in Dr. Morimoto's<br>Economy and Business Seminar. We are happy to greet<br>you to the upcoming college life. In our Seminar, due<br>to the COVID-19 pandemic, we have been working on<br>the campaign project to help the freshmen to enjoy<br>school life in this new normal era. To make your<br>college life more intriguing, we would like to offer you 3 online services:<br>(1) SILSxSILS (2)Waseda Direct (3)WASEGUARD
   </p>
 </section>
@@ -136,6 +134,6 @@
     <p>Copyright ©Waseda University SILS Seminar on Economy and Business<br> All Rights Reserved.</p>
   </footer>
 
-  <div class="snow"><i class="fas fa-heart"></i></div> 
+  <div class="snow"><i class="🌸"></i></div> 
 </body>
 </html>
