--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
     <p>Copyright ©Waseda University SILS Seminar on Economy and Business<br> All Rights Reserved.</p>
   </footer>
 
-  <div class="snow"><i class="🌸"></i></div> 
+  <div class="snow">🌸</div> 
 </body>
 </html>
