--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
  <section id="second-block">
   <p class="info-title">
       Welcome
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
   </p>
   
   <p class="info-text">
@@ -40,8 +38,6 @@
   <section id="third-block">
     <p class="project-title">
       3 Online Services
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
     </p>
   </section>
 <!--   Third block End   -->
@@ -50,8 +46,6 @@
 <!--   SILSxSILS   -->
 <section id="fourth-block">
   <div class="silsxsils">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
     <a href="https://mia828.github.io/silsxsils/" class="web"><i class="fas fa-laptop faa-bounce animated"></i>Website</a>
     <a href="https://www.instagram.com/silsxsils_2021" class="insta"><i class="fab fa-instagram faa-tada animated-hover"></i>Instagram</a>
     <a href="https://www.facebook.com/groups/855884521916695/?ref=share" class="fb"><i class="fab fa-facebook faa-bounce animated-hover"></i>Facebook</a>
@@ -70,8 +64,6 @@
 <!--   WASEDADIRECT   -->
 <section id= "fifth-block">
     <div class="wasedadirect">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
       <a href="http://wasedadirect.com/" class="web"><i class="fas fa-laptop faa-bounce animated"></i>Website</a>
       <a href="https://www.instagram.com/waseda_direct/" class="insta"><i class="fab fa-instagram faa-tada animated-hover"></i>Instagram</a>
       <a href="https://youtu.be/zJqhYTpGh1A" class="youtube"><i class="fab fa-youtube faa-vertical animated-hover"></i>Video</a>
@@ -89,8 +81,6 @@
 <!--   WASEGUARD  -->
 <section id= "sixth-block">
 <div class="waseguard">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
   <a href="https://waseguard.wixsite.com/mysite" class="web"><i class="fas fa-laptop faa-bounce animated"></i>Website</a>
   <a href="https://www.instagram.com/waseguard/" class="insta"><i class="fab fa-instagram faa-tada animated-hover"></i>Instagram</a>
 
@@ -110,14 +100,10 @@
 <section id="seventh-block">
   <div class="contact-title">
   Feel free to contact us!
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap" rel="stylesheet">
 </section>
   <!--   Seventh block End   -->
   <footer>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
-    <p>Copyright ©Waseda University SILS Seminar on Economy and Business<br> All Rights Reserved.</p>
+    <p>2021 ©Waseda University SILS Seminar on Economy and Business<br> All Rights Reserved.</p>
   </footer>
 
   <div class="snow">🌸</div> 
