--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
     <p>2021 ©Waseda University SILS Seminar on Economy and Business<br> All Rights Reserved.</p>
   </footer>
 
-  <div class="snow">🌸</div> 
+  <div class="snow">☂</div> 
 </body>
 </html>
